--- a/ClientApp/src/app/shared/templates/reviews/reviews.template.html
+++ b/ClientApp/src/app/shared/templates/reviews/reviews.template.html
@@ -11,6 +11,7 @@
     <button
       mat-raised-button
       color="primary mb-3"
+      [disabled]="!isEventReview"
       (click)="onAddReview()">
       <mat-icon>rate_review</mat-icon>
       Write a Review
