--- a/ClientApp/src/app/pages/event-details/event-details.component.scss
+++ b/ClientApp/src/app/pages/event-details/event-details.component.scss
@@ -50,17 +50,20 @@
   }
   
   .warning {
-    display: flex;
-    align-items: center;
     background-color: #fff3cd;
-    color: #856404;
-    padding: 12px 16px;
-    border-left: 5px solid var(--accent-color);
-    margin-bottom: 16px;
-    border-radius: 4px;
-  
-    .icon {
-      margin-right: 8px;
+    border-left: 4px solid #ffa000; 
+    display: flex;
+    align-items: start;
+  }
+
+  .warning-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+
+    mat-icon, span {
+      color: #856404;
     }
   }
   
