--- a/ClientApp/src/app/components/filter/filter.component.html
+++ b/ClientApp/src/app/components/filter/filter.component.html
@@ -52,6 +52,16 @@
         </mat-form-field>
       </div>     
     </div>
+    <div *ngIf="searchParams.headerType === 'event'">
+      <mat-checkbox [(ngModel)]="searchParams.showHistory">
+        Show History
+      </mat-checkbox>
+    
+      <mat-checkbox [(ngModel)]="searchParams.showSold">
+        Show Sold
+      </mat-checkbox>
+    </div>
+     
   </div>
 
   <ng-content></ng-content>
