--- a/ClientApp/src/app/components/navbar/navbar.component.html
+++ b/ClientApp/src/app/components/navbar/navbar.component.html
@@ -1,17 +1,29 @@
-
 <div class="nav">
     <nav class="container">
-        <img class="app-logo" src="../images/logo-long2.png" alt="app-logo" (click)="onLogoClick()">
-        <div class = "content">
-            <ul>
-                <ng-content></ng-content>
-                <li>
-                    <app-mailbox></app-mailbox>
-                </li>
-                <li>
-                    <app-profile></app-profile>
-                </li>
+      <img class="app-logo" src="../images/logo-long2.png" alt="app-logo" (click)="onLogoClick()">
+  
+      <div class="wrapper">
+        <div class="content">
+            <ul class="section-1">
+                <ng-content *ngTemplateOutlet="content"></ng-content>
             </ul>
-        </div>
+            <ul class="section-2">
+                <li><app-mailbox /></li>
+                <li><app-profile /></li>
+            </ul>
+          </div>
+    
+      
+            <button mat-button color="primary" class="btn-menu" (click)="toggleMenu()">
+                Menu
+              </button>
+              <!-- Custom dropdown menu -->
+              <div class="menu" [ngClass]="{'open': isMenuOpen}">
+                <ul>
+                    <ng-content *ngTemplateOutlet="content"></ng-content>
+                </ul>
+              </div>
+      </div>
     </nav>
-</div>
+  </div>
+  
