--- a/ClientApp/src/app/pages/customer-dashboard/customer-dashboard.component.html
+++ b/ClientApp/src/app/pages/customer-dashboard/customer-dashboard.component.html
@@ -1,11 +1,15 @@
 <app-filter [searchParams]="searchParams" (searchParamsChange)="updateSearchParams($event)" (headerTypeChange)="changeHeaderType($event)">
     <app-search (search)="loadPage()" [searchParams]="searchParams" (searchParamsChange)="updateSearchParams($event)"></app-search>
-    <app-event-carousel *ngIf="recentEventHeaders.length > 0" [headers]="recentEventHeaders" title="Recently Posted Events"></app-event-carousel>
-    <mat-divider></mat-divider>
-    <!-- Add a button to manually trigger the artificial subscription -->
-    <!-- <button (click)="triggerNewSubscription()">Trigger New Subscription</button> -->
+    <div class="carousels">
+        <app-event-header-carousel *ngIf="recentEventHeaders.length > 0" [headers]="recentEventHeaders" title="Recently Posted Events"></app-event-header-carousel>
+        <mat-divider *ngIf="recentEventHeaders.length > 0"></mat-divider>
+        <!-- Add a button to manually trigger the artificial subscription -->
+        <!-- <button (click)="triggerNewSubscription()">Trigger New Subscription</button> -->
 
-    <app-event-carousel [headers]="eventHeaders" title="Local Events"></app-event-carousel>
-    <mat-divider></mat-divider>
-    <app-event-carousel [headers]="eventHeaders" title="Free Events"></app-event-carousel>
+        <app-event-header-carousel title="Discover Events"></app-event-header-carousel>
+        <mat-divider></mat-divider>
+        <app-artist-header-carousel title="Discover Artists"></app-artist-header-carousel>
+        <mat-divider></mat-divider>
+        <app-venue-header-carousel title="Discover Venues"></app-venue-header-carousel>
+    </div>
 </app-filter>
