--- a/ClientApp/src/app/components/footer/footer.component.html
+++ b/ClientApp/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="container">
     <div class="top-row">
-        <img class="app-logo" src="../images/logo-long2.png" alt="app-logo">
+        <img class="app-logo" src="../images/logo-long.png" alt="app-logo">
         <a routerLink="/partner" routerLinkActive="active">Find Events/Artists/Venues</a>
     </div>
   
