--- a/ClientApp/src/app/pages/artist-details/artist-details.component.html
+++ b/ClientApp/src/app/pages/artist-details/artist-details.component.html
@@ -1,5 +1,5 @@
 @if(artist) {
-    <app-artist-details-hero [(artist)]="artist" [editMode]="editMode" (eventChange)="onChangeDetected()" />
+    <app-artist-details-hero [(artist)]="artist" [editMode]="editMode" (artistChange)="onChangeDetected()" />
     <app-scrollspy [navItems]="navItems"></app-scrollspy>
     <div class="container" *ngIf="artist">
         <section [id]="navItems[0].fragment">
