--- a/ClientApp/src/app/pages/my-artist/my-artist.component.html
+++ b/ClientApp/src/app/pages/my-artist/my-artist.component.html
@@ -1,6 +1,6 @@
 @if (artist) {
     <app-config-navbar [(editMode)]="editMode" (cancel)="cancelChanges()" (save)="saveChanges()" [saveable]="saveable"></app-config-navbar>
-    <app-artist-details [artist]="artist" [editMode]="editMode" (entityChange)="onItemChange()"></app-artist-details>
+    <app-artist-details [artist]="artist" [editMode]="editMode" (artistChange)="onItemChange()"></app-artist-details>
 }@else {
     <app-manager-item-not-found [itemName]="'artist'"/>
 }
