--- a/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -1,6 +1,6 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 16px;
     padding: 16px;
     min-height: 100vh;
